.stack-work/logs/transformers-0.4.3.0.log
Configuring transformers-0.4.3.0...
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing library for transformers-0.4.3.0..
Building library for transformers-0.4.3.0..
[ 1 of 27] Compiling Control.Monad.IO.Class ( Control/Monad/IO/Class.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/IO/Class.o )
[ 2 of 27] Compiling Control.Monad.Signatures ( Control/Monad/Signatures.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Signatures.o )
[ 3 of 27] Compiling Control.Monad.Trans.Class ( Control/Monad/Trans/Class.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Class.o )
[ 4 of 27] Compiling Control.Monad.Trans.Cont ( Control/Monad/Trans/Cont.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Cont.o )
[ 5 of 27] Compiling Control.Monad.Trans.RWS.Lazy ( Control/Monad/Trans/RWS/Lazy.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/RWS/Lazy.o )
[ 6 of 27] Compiling Control.Monad.Trans.RWS ( Control/Monad/Trans/RWS.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/RWS.o )
[ 7 of 27] Compiling Control.Monad.Trans.RWS.Strict ( Control/Monad/Trans/RWS/Strict.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/RWS/Strict.o )
[ 8 of 27] Compiling Control.Monad.Trans.Reader ( Control/Monad/Trans/Reader.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Reader.o )
[ 9 of 27] Compiling Control.Monad.Trans.State.Lazy ( Control/Monad/Trans/State/Lazy.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/State/Lazy.o )
[10 of 27] Compiling Control.Monad.Trans.State ( Control/Monad/Trans/State.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/State.o )
[11 of 27] Compiling Control.Monad.Trans.State.Strict ( Control/Monad/Trans/State/Strict.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/State/Strict.o )
[12 of 27] Compiling Data.Functor.Classes ( Data/Functor/Classes.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Data/Functor/Classes.o )
[13 of 27] Compiling Control.Monad.Trans.Writer.Strict ( Control/Monad/Trans/Writer/Strict.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Writer/Strict.o )
[14 of 27] Compiling Control.Monad.Trans.Writer.Lazy ( Control/Monad/Trans/Writer/Lazy.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Writer/Lazy.o )
[15 of 27] Compiling Control.Monad.Trans.Writer ( Control/Monad/Trans/Writer.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Writer.o )
[16 of 27] Compiling Control.Monad.Trans.List ( Control/Monad/Trans/List.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/List.o )
[17 of 27] Compiling Control.Monad.Trans.Identity ( Control/Monad/Trans/Identity.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Identity.o )
[18 of 27] Compiling Control.Monad.Trans.Except ( Control/Monad/Trans/Except.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Except.o )
[19 of 27] Compiling Control.Monad.Trans.Maybe ( Control/Monad/Trans/Maybe.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Maybe.o )
[20 of 27] Compiling Control.Monad.Trans.Error ( Control/Monad/Trans/Error.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Control/Monad/Trans/Error.o )

[;1mControl/Monad/Trans/Error.hs:69:10: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    Duplicate instance declarations:
      instance MonadPlus IO
        -- Defined at Control/Monad/Trans/Error.hs:69:10
      instance MonadPlus IO -- Defined in ‘GHC.Base’[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m69 |[0m[0m instance [;1m[31mMonadPlus IO[0m[0m where
[;1m[34m   |[0m[0m[;1m[31m          ^^^^^^^^^^^^[0m[0m
[0m[0m[0m
[;1mControl/Monad/Trans/Error.hs:73:10: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    Duplicate instance declarations:
      instance Alternative IO
        -- Defined at Control/Monad/Trans/Error.hs:73:10
      instance Alternative IO -- Defined in ‘GHC.Base’[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m73 |[0m[0m instance [;1m[31mAlternative IO[0m[0m where
[;1m[34m   |[0m[0m[;1m[31m          ^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m